[tool.poetry]
name = "scaffold-engine"
version = "0.1.0"
description = "Python CLI for standardized and reproducible project scaffolding with Cookiecutter and Cruft"
authors = ["Alexandre Rodrigues"]
license = "MIT"
readme = "README.md"
packages = [{ include = "engine" }]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"

[tool.poetry.scripts]
scaffold = "engine.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"